versioned_docs/version-8.9/apis-tools/typescript/api-reference/index/variables/PermissionTypeEnum.md
---
title: "Variable: PermissionTypeEnum"
sidebar_label: "PermissionTypeEnum"
mdx:
  format: md
---

# Variable: PermissionTypeEnum

```ts
const PermissionTypeEnum: object;
```

Specifies the type of permissions.

## Type Declaration

### ACCESS

```ts
readonly ACCESS: "ACCESS" = 'ACCESS';
```

### CANCEL_PROCESS_INSTANCE

```ts
readonly CANCEL_PROCESS_INSTANCE: "CANCEL_PROCESS_INSTANCE" = 'CANCEL_PROCESS_INSTANCE';
```

### CLAIM

```ts
readonly CLAIM: "CLAIM" = 'CLAIM';
```

### CLAIM_USER_TASK

```ts
readonly CLAIM_USER_TASK: "CLAIM_USER_TASK" = 'CLAIM_USER_TASK';
```

### COMPLETE

```ts
readonly COMPLETE: "COMPLETE" = 'COMPLETE';
```

### COMPLETE_USER_TASK

```ts
readonly COMPLETE_USER_TASK: "COMPLETE_USER_TASK" = 'COMPLETE_USER_TASK';
```

### CREATE

```ts
readonly CREATE: "CREATE" = 'CREATE';
```

### CREATE_BATCH_OPERATION_CANCEL_PROCESS_INSTANCE

```ts
readonly CREATE_BATCH_OPERATION_CANCEL_PROCESS_INSTANCE: "CREATE_BATCH_OPERATION_CANCEL_PROCESS_INSTANCE" = 'CREATE_BATCH_OPERATION_CANCEL_PROCESS_INSTANCE';
```

### CREATE_BATCH_OPERATION_DELETE_DECISION_DEFINITION

```ts
readonly CREATE_BATCH_OPERATION_DELETE_DECISION_DEFINITION: "CREATE_BATCH_OPERATION_DELETE_DECISION_DEFINITION" = 'CREATE_BATCH_OPERATION_DELETE_DECISION_DEFINITION';
```

### CREATE_BATCH_OPERATION_DELETE_DECISION_INSTANCE

```ts
readonly CREATE_BATCH_OPERATION_DELETE_DECISION_INSTANCE: "CREATE_BATCH_OPERATION_DELETE_DECISION_INSTANCE" = 'CREATE_BATCH_OPERATION_DELETE_DECISION_INSTANCE';
```

### CREATE_BATCH_OPERATION_DELETE_PROCESS_DEFINITION

```ts
readonly CREATE_BATCH_OPERATION_DELETE_PROCESS_DEFINITION: "CREATE_BATCH_OPERATION_DELETE_PROCESS_DEFINITION" = 'CREATE_BATCH_OPERATION_DELETE_PROCESS_DEFINITION';
```

### CREATE_BATCH_OPERATION_DELETE_PROCESS_INSTANCE

```ts
readonly CREATE_BATCH_OPERATION_DELETE_PROCESS_INSTANCE: "CREATE_BATCH_OPERATION_DELETE_PROCESS_INSTANCE" = 'CREATE_BATCH_OPERATION_DELETE_PROCESS_INSTANCE';
```

### CREATE_BATCH_OPERATION_MIGRATE_PROCESS_INSTANCE

```ts
readonly CREATE_BATCH_OPERATION_MIGRATE_PROCESS_INSTANCE: "CREATE_BATCH_OPERATION_MIGRATE_PROCESS_INSTANCE" = 'CREATE_BATCH_OPERATION_MIGRATE_PROCESS_INSTANCE';
```

### CREATE_BATCH_OPERATION_MODIFY_PROCESS_INSTANCE

```ts
readonly CREATE_BATCH_OPERATION_MODIFY_PROCESS_INSTANCE: "CREATE_BATCH_OPERATION_MODIFY_PROCESS_INSTANCE" = 'CREATE_BATCH_OPERATION_MODIFY_PROCESS_INSTANCE';
```

### CREATE_BATCH_OPERATION_RESOLVE_INCIDENT

```ts
readonly CREATE_BATCH_OPERATION_RESOLVE_INCIDENT: "CREATE_BATCH_OPERATION_RESOLVE_INCIDENT" = 'CREATE_BATCH_OPERATION_RESOLVE_INCIDENT';
```

### CREATE_DECISION_INSTANCE

```ts
readonly CREATE_DECISION_INSTANCE: "CREATE_DECISION_INSTANCE" = 'CREATE_DECISION_INSTANCE';
```

### CREATE_PROCESS_INSTANCE

```ts
readonly CREATE_PROCESS_INSTANCE: "CREATE_PROCESS_INSTANCE" = 'CREATE_PROCESS_INSTANCE';
```

### CREATE_TASK_LISTENER

```ts
readonly CREATE_TASK_LISTENER: "CREATE_TASK_LISTENER" = 'CREATE_TASK_LISTENER';
```

### DELETE

```ts
readonly DELETE: "DELETE" = 'DELETE';
```

### DELETE_DECISION_INSTANCE

```ts
readonly DELETE_DECISION_INSTANCE: "DELETE_DECISION_INSTANCE" = 'DELETE_DECISION_INSTANCE';
```

### DELETE_DRD

```ts
readonly DELETE_DRD: "DELETE_DRD" = 'DELETE_DRD';
```

### DELETE_FORM

```ts
readonly DELETE_FORM: "DELETE_FORM" = 'DELETE_FORM';
```

### DELETE_PROCESS

```ts
readonly DELETE_PROCESS: "DELETE_PROCESS" = 'DELETE_PROCESS';
```

### DELETE_PROCESS_INSTANCE

```ts
readonly DELETE_PROCESS_INSTANCE: "DELETE_PROCESS_INSTANCE" = 'DELETE_PROCESS_INSTANCE';
```

### DELETE_RESOURCE

```ts
readonly DELETE_RESOURCE: "DELETE_RESOURCE" = 'DELETE_RESOURCE';
```

### DELETE_TASK_LISTENER

```ts
readonly DELETE_TASK_LISTENER: "DELETE_TASK_LISTENER" = 'DELETE_TASK_LISTENER';
```

### EVALUATE

```ts
readonly EVALUATE: "EVALUATE" = 'EVALUATE';
```

### MODIFY_PROCESS_INSTANCE

```ts
readonly MODIFY_PROCESS_INSTANCE: "MODIFY_PROCESS_INSTANCE" = 'MODIFY_PROCESS_INSTANCE';
```

### READ

```ts
readonly READ: "READ" = 'READ';
```

### READ_DECISION_DEFINITION

```ts
readonly READ_DECISION_DEFINITION: "READ_DECISION_DEFINITION" = 'READ_DECISION_DEFINITION';
```

### READ_DECISION_INSTANCE

```ts
readonly READ_DECISION_INSTANCE: "READ_DECISION_INSTANCE" = 'READ_DECISION_INSTANCE';
```

### READ_JOB_METRIC

```ts
readonly READ_JOB_METRIC: "READ_JOB_METRIC" = 'READ_JOB_METRIC';
```

### READ_PROCESS_DEFINITION

```ts
readonly READ_PROCESS_DEFINITION: "READ_PROCESS_DEFINITION" = 'READ_PROCESS_DEFINITION';
```

### READ_PROCESS_INSTANCE

```ts
readonly READ_PROCESS_INSTANCE: "READ_PROCESS_INSTANCE" = 'READ_PROCESS_INSTANCE';
```

### READ_TASK_LISTENER

```ts
readonly READ_TASK_LISTENER: "READ_TASK_LISTENER" = 'READ_TASK_LISTENER';
```

### READ_USAGE_METRIC

```ts
readonly READ_USAGE_METRIC: "READ_USAGE_METRIC" = 'READ_USAGE_METRIC';
```

### READ_USER_TASK

```ts
readonly READ_USER_TASK: "READ_USER_TASK" = 'READ_USER_TASK';
```

### UPDATE

```ts
readonly UPDATE: "UPDATE" = 'UPDATE';
```

### UPDATE_PROCESS_INSTANCE

```ts
readonly UPDATE_PROCESS_INSTANCE: "UPDATE_PROCESS_INSTANCE" = 'UPDATE_PROCESS_INSTANCE';
```

### UPDATE_TASK_LISTENER

```ts
readonly UPDATE_TASK_LISTENER: "UPDATE_TASK_LISTENER" = 'UPDATE_TASK_LISTENER';
```

### UPDATE_USER_TASK

```ts
readonly UPDATE_USER_TASK: "UPDATE_USER_TASK" = 'UPDATE_USER_TASK';
```
